Addition de memes et clarifications